Final Review completed

--- a/src/Variables.scss
+++ b/src/Variables.scss
@@ -7,6 +7,7 @@ $breakpoint-md: 1200px;
 
 $header-height: 50px;
 $side-nav-width: 160px;
+$side-nav-width-shrink: 50px;
 // $header-expanded-height: 145px;
 // $main-left-padding: 30px;
 // $main-left-padding-xs: 15px;
