--- a/src/index.scss
+++ b/src/index.scss
@@ -2,6 +2,7 @@
 
 html {
     height: 100%;
+    scroll-behavior: smooth;
 }
 body {
     margin: 0;
@@ -75,9 +76,10 @@ select.drop-down {
     float: left;
     width: 100%;
     height: 100%;
-    max-width: 1365px;
-    margin-left: 50%;
-    transform: translate(-50%);
+    // padding: 10px;
+    // max-width: 1365px;
+    // margin-left: 50%;
+    // transform: translate(-50%);
 }
 
 label.check-box-item {
@@ -101,6 +103,30 @@ label.check-box-item {
 
 svg * {
     stroke: none !important;
+}
+
+@keyframes slideFromLeftToRight {
+    from {
+        opacity: 0;
+        transform: translate(-10px);
+    }
+
+    to {
+        opacity: 1;
+        transform: translate(0px);
+    }
+}
+
+@keyframes slideFromRightToLeft {
+    from {
+        opacity: 0;
+        transform: translate(10px);
+    }
+
+    to {
+        opacity: 1;
+        transform: translate(0px);
+    }
 }
 
 @media only screen and (min-width: $breakpoint-xs) {
